Adicionando campo data

--- a/app/pages/messages-new/messages-new.html
+++ b/app/pages/messages-new/messages-new.html
@@ -21,7 +21,7 @@
       </ion-avatar>
       <h2>{{item.sender_name}}</h2>
       <p>
-        01/06/2015
+        {{item.message_date}}
       </p>
     </ion-item>
 
