--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
   <!-- the bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
   <script src="lib/geolib.min.js"></script>
+  <script src="lib/date.format.js"></script>
 
 </body>
 
