Adicionado cor customizada

--- a/app/pages/mapa/mapa.html
+++ b/app/pages/mapa/mapa.html
@@ -1,5 +1,5 @@
-<ion-navbar *navbar>
-  <ion-title>mapa</ion-title>
+<ion-navbar *navbar custom>
+  <ion-title>Mensagem</ion-title>
 </ion-navbar>
 
 <ion-content>
