--- a/app/pages/friends/friends.html
+++ b/app/pages/friends/friends.html
@@ -1,4 +1,4 @@
-<ion-navbar *navbar>
+<ion-navbar *navbar custom>
   <ion-title>Amigos</ion-title>
   <button menuToggle>
     <ion-icon name="menu"></ion-icon>
