--- a/app/pages/message-body/message-body.html
+++ b/app/pages/message-body/message-body.html
@@ -1,15 +1,9 @@
-<!--
-  Generated template for the MessageBodyPage page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-navbar *navbar>
+<ion-navbar *navbar custom>
   <ion-title>Mensagem</ion-title>
 </ion-navbar>
 
 <ion-content class="message-body">
-  <ion-card> 
+  <ion-card>
     <img src="img/amsterdan.jpg" alt="" />
     <div class=" card-title">
       {{message.sender_name}}
