--- a/app/pages/messages-new/messages-new.html
+++ b/app/pages/messages-new/messages-new.html
@@ -1,4 +1,4 @@
-<ion-navbar *navbar>
+<ion-navbar *navbar custom>
   <ion-title>Mensagens Novas</ion-title>
   <button menuToggle>
     <ion-icon name="menu"></ion-icon>
