Adicionada novas imagens para mensagens

--- a/app/pages/message-body/message-body.html
+++ b/app/pages/message-body/message-body.html
@@ -4,7 +4,7 @@
 
 <ion-content class="message-body">
   <ion-card>
-    <img src="img/amsterdan.jpg" alt="" />
+    <img [src]="image" alt="" />
     <div class=" card-title">
       {{message.sender_name}}
     </div>
