--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -4,8 +4,9 @@
   <ion-content>
     <img class="menu-img" src="img/map.jpg" alt="" />
     <ion-list inset>
-      <button ion-item (click)="openMenu(messages)"  menuClose>Mensagens</button>
-      <button ion-item (click)="openMenu(friends)"  menuClose>Amigos</button>
+      <button ion-item (click)="openMenu(messages)"  menuClose><ion-icon name="chatboxes"></ion-icon>  Mensagens</button>
+      <button ion-item (click)="openMenu(friends)"  menuClose><ion-icon name="contacts"></ion-icon> Amigos</button>
+      <button ion-item menuClose><ion-icon name="logo-facebook"></ion-icon> Compartilhar </button>
     </ion-list>
   </ion-content>
 </ion-menu>
