--- a/app/pages/messages-new/messages-new.html
+++ b/app/pages/messages-new/messages-new.html
@@ -7,12 +7,15 @@
 
 <ion-content class="messages-new">
   <ion-card *ngFor="let item of messageList">
+    <div class="address">
+      {{item.endereco}}
+    </div>
+
     <div style="position: relative">
       <img style="min-width: 100%" [src]="item.map"/>
       <button fab fab-right fab-top class="fab-map" (click)="openMap(item)">
         <ion-icon name="navigate"></ion-icon>
       </button>
-
     </div>
 
     <ion-item >
@@ -25,21 +28,13 @@
       </p>
     </ion-item>
 
-
     <ion-card-content>
-      <p>
-        <strong>
-          {{item.endereco}}
-        </strong>
-      </p>
       <p>
         Você está a {{item.distance}} do local desta mensagem.
       </p>
-    </ion-card-content>
-
-    <ion-item>
       <button primary clear block *ngIf = "!isNear(item)">Muito distante<ion-icon name="lock"></ion-icon></button>
       <button primary clear block (click)="openMessage(item)" *ngIf = "isNear(item)">Ler <ion-icon name="unlock"></ion-icon></button>
-    </ion-item>
+    </ion-card-content>
+
   </ion-card>
 </ion-content>
