--- a/app/pages/messages-read/messages-read.html
+++ b/app/pages/messages-read/messages-read.html
@@ -20,7 +20,7 @@
       </ion-avatar>
       <h2>{{item.sender_name}}</h2>
       <p>
-        01/06/2015
+        {{item.message_date}}
       </p>
     </ion-item>
 
