--- a/app/pages/messages-read/messages-read.html
+++ b/app/pages/messages-read/messages-read.html
@@ -16,7 +16,7 @@
 
     <ion-item >
       <ion-avatar item-left>
-        <img src="{{item.photo}}" />
+        <img [src]="item.photo" />
       </ion-avatar>
       <h2>{{item.sender_name}}</h2>
       <p>
